--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,25 +22,19 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
       <mat-icon>share</mat-icon>
     </button>
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+      <mat-icon>twitter</mat-icon>
+    </button>
   </mat-toolbar>
   <div class="content">
 
 
     <mat-tab-group style="width: 100%;" animationDuration="0ms">
       <mat-tab *ngFor="let link of links" label="{{link.group}}">
-        <a class="a-link" *ngFor="let item of link.links" class="card" target="_blank" rel="noopener" [href]="item.url"
-          [title]="item.title" [style]="styling(item)">
+        <a class="a-link" *ngFor="let item of link.links" class="card " target="_blank" rel="noopener"
+          [href]="item.url" [title]="item.title" [style]="styling(item)">
           <img [src]="item?.image" [alt]="item.title" style="max-width: 100px;padding: 15px;" />
-          <!-- <span  *ngIf="!item?.image">{{ item.title }}</span> -->
-          <!-- <svg
-        class="material-icons"
-        xmlns="http://www.w3.org/2000/svg"
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-      >
-        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z" />
-      </svg> -->
+
         </a>
       </mat-tab>
     </mat-tab-group>
